# flask_hello_world

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
templates/: index.html
